s3 and backup working

--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -1,5 +1,5 @@
 # pull official base image
-FROM python:3.11.4-slim-buster
+FROM python:3.11.4-bullseye
 
 # set work directory
 WORKDIR /usr/src/app
@@ -10,6 +10,7 @@ ENV PYTHONUNBUFFERED 1
 
 # install system dependencies
 RUN apt-get update && apt-get install -y netcat
+RUN apt-get update && DEBIAN_FRONTEND=noninteractive apt-get install -y  postgresql-13 postgresql-client-13
 
 # install dependencies
 RUN pip install --upgrade pip
