--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -1,3 +1,14 @@
 Django==5.0.2
 psycopg2-binary==2.9.9
 gunicorn==21.2.0
+django-markdownify==0.9.3
+Markdown==3.5.2
+django-crispy-forms==2.1
+crispy-bootstrap5==2023.10
+google-api-python-client==2.118.0
+google-auth==2.28.0
+google-auth-httplib2==0.2.0
+google-auth-oauthlib==1.2.0
+django-dbbackup==4.1.0
+boto3==1.34.54
+django-storages==1.14.2
