--- a/app/Dockerfile.prod
+++ b/app/Dockerfile.prod
@@ -3,7 +3,7 @@
 ###########
 
 # pull official base image
-FROM python:3.11.4-slim-buster as builder
+FROM python:3.11.4-bullseye as builder
 
 # set work directory
 WORKDIR /usr/src/app
@@ -15,7 +15,6 @@ ENV PYTHONUNBUFFERED 1
 # install system dependencies
 RUN apt-get update && \
     apt-get install -y --no-install-recommends gcc
-RUN apt-get update && DEBIAN_FRONTEND=noninteractive apt-get install -y  postgresql-13 postgresql-client-13
 
 # lint
 RUN pip install --upgrade pip
@@ -33,7 +32,7 @@ RUN pip wheel --no-cache-dir --no-deps --wheel-dir /usr/src/app/wheels -r requir
 #########
 
 # pull official base image
-FROM python:3.11.4-slim-buster
+FROM python:3.11.4-bullseye 
 
 # create directory for the app user
 RUN mkdir -p /home/app
@@ -51,6 +50,7 @@ WORKDIR $APP_HOME
 
 # install dependencies
 RUN apt-get update && apt-get install -y --no-install-recommends netcat
+RUN apt-get update && DEBIAN_FRONTEND=noninteractive apt-get install -y  postgresql-13 postgresql-client-13
 COPY --from=builder /usr/src/app/wheels /wheels
 COPY --from=builder /usr/src/app/requirements.txt .
 RUN pip install --upgrade pip
